# Grade-Calculator

./: CMakeLists.txt  README.md  category.cpp  category.h  course.cpp  course.h  finalGrade.js  finalGradeToFile.php  gpa.js  gpa.php  gpaCalculator.cpp  gpaCalculator.h  gpaToFile.php  grade.php  main.cpp  process.py  results.txt  style.css
